# SoftRasterize

./: README.md
SoftRasterize/: CMakeLists.txt
SoftRasterize/include/Color/: color.hpp
SoftRasterize/include/Framebuffer/: framebuffer.hpp
SoftRasterize/include/Math/: mat4.hpp  vec3.hpp  vec4.hpp
SoftRasterize/include/Pixel/: pixel.hpp
SoftRasterize/include/Position/: position.hpp
SoftRasterize/include/Renderer/: renderer.hpp
SoftRasterize/include/Window/: window.hpp
SoftRasterize/src/: main.cpp
SoftRasterize/src/Framebuffer/: framebuffer.cpp
SoftRasterize/src/Math/: mat4.cpp  vec3.cpp  vec4.cpp
SoftRasterize/src/Pixel/: Pixel.cpp
SoftRasterize/src/Rasterize/: Rasterize.cpp
SoftRasterize/src/Renderer/: renderer.cpp
SoftRasterize/src/Window/: window.cpp
